Ability Refactor Preparation + LanguageLoader BugFixes